overlays/sample1/org/netpol-connect.yaml
# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: connect-mart
spec:
  podSelector:
    matchLabels:
      app : apigee-connect-agent
  policyTypes:
    - Egress
  egress:
    - to: 
      - namespaceSelector:
          matchLabels:
            app: apigee    
      - podSelector:
          matchLabels:
            app: apigee-mart
      ports:
      - protocol: TCP
        port: 8843
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: connect-control-plane
spec:
  podSelector:
    matchLabels:
      app : apigee-connect-agent
  policyTypes:
    - Egress
  egress:
    - to: [] 
      ports:
      - protocol: TCP
        port: 443
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: connect-metrics
spec:
  podSelector:
    matchLabels:
      app : apigee-connect-agent
  policyTypes:
    - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          app: apigee
    - podSelector:
        matchLabels:
          app: apigee-metrics
    ports:
    - protocol: TCP
      port: 7070
